<resources>
    <string name="app_name">Aceline Services</string>

    <!-- Strings related to layouts -->
    <string name="img_desc">Logo/</string>

    <!-- Strings related to Google Services -->
    <string name="maps_key">AIzaSyAb1NNSLUT7vzTIezPAqKumMB7wNXa2hMg</string>


    <!-- Strings related to server location -->
    <string name="url_server">http://192.168.0.103:8000/</string>

    <!-- Strings related to menu -->
    <string name="menu_drive">Courses</string>
    <string name="menu_booking">Réservations</string>
    <string name="menu_arrive">Destinations</string>
    <string name="menu_notifs">Notifications</string>
    <string name="menu_settings">Paramètres</string>
    <string name="menu_logout">Déconnexion</string>

    <!-- Strings related to car list -->
    <string name="car_list_available">Disponible</string>
    <string name="car_list_invavailable">Indisponible</string>

    <!-- Strings related to car detail -->
    <string name="car_detail_registration">Immatriculation : </string>
    <string name="car_detail_color">Couleur : </string>
    <string name="car_detail_select">Choisir cette voiture</string>
    <string name="car_detail_exit">Quitter</string>
    <string name="car_detail_registration_card">Carte Grise</string>
    <string name="car_detail_assurance_card">Carte Verte</string>
    <string name="car_detail_contract">"Contrat d'assurance"</string>

    <!-- Strings related to drive booking -->
    <string name="booking_drive_title">Réservation : </string>

    <!-- Strings related to travel list -->
    <string name="travel_list_start">Départ prévue </string>

    <!-- Strings related to travel detail -->
    <string name="travel_detail_distance">Distance :</string>


    <!-- Strings related to login -->
    <string name="prompt_email">"Nom d'utilisateur"</string>
    <string name="prompt_password">Mot de Passe</string>
    <string name="action_sign_in">Se connecter</string>
    <string name="action_forgot_password">Mot de Passe Oublié</string>
    <string name="action_sign_in_short">Connexion</string>
    <string name="error_invalid_email">Cette adresse mail est invalide</string>
    <string name="error_invalid_password">Ce mot de passe est trop court</string>
    <string name="error_incorrect_password">Le mot de passe est incorrecte</string>
    <string name="error_field_required">Ce champ est obligatoire</string>
    <string name="permission_rationale">"L'accès au contact est obligatoire pour compléter l'adresse mail."</string>


    <string name="title_activity_main">Menu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Paramètres</string>
    <string name="title_activity_drive">Conduite</string>
    <string name="title_home">Acceuil</string>
    <string name="title_dashboard">Compte</string>
    <string name="title_notifications">Courses</string>
    <string name="title_activity_menu">Menu</string>

    <!-- Strings related to driver menu -->
    <string name="action_change_car">Changer de voiture</string>
    <string name="action_documents">Documents</string>
    <string name="action_logout">Déconnexion</string>
    <string name="action_modify_info">Modifier Informations</string>
    <string name="action_history">Historique</string>

</resources>
