<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/drive"
            android:title="@string/menu_drive" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/booking"
            android:title="@string/menu_booking" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/map"
            android:title="@string/menu_arrive" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/chatting"
            android:title="@string/menu_notifs" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/settings"
            android:title="@string/menu_settings" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:icon="@drawable/ic_menu_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:icon="@drawable/ic_menu_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
