<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.msrouji.blacklinesservices.CarDetailActivity">

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="551dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="10dp"
        tools:layout_editor_absoluteY="8dp">

        <ViewFlipper
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/flipperid"
            android:flipInterval="4000">

            <com.github.chrisbanes.photoview.PhotoView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:id="@+id/car_front"
                android:layout_gravity="center_horizontal"/>

            <com.github.chrisbanes.photoview.PhotoView
                android:layout_width="250dp"
                android:layout_height="200dp"
                android:scaleType="fitCenter"
                android:id="@+id/car_back"
                android:layout_gravity="center_horizontal"/>

        </ViewFlipper>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"

            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_detail_registration" />

            <TextView
                android:id="@+id/car_registration"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"

            android:layout_marginTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/car_detail_color" />

            <TextView
                android:id="@+id/car_color"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:text="@string/car_detail_registration_card"
                android:id="@+id/registration_card"
                android:layout_gravity="start"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:id="@+id/assurance_card"
                android:text="@string/car_detail_assurance_card"
                android:layout_gravity="start"/>
        </LinearLayout>



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:id="@+id/select_car"
            android:onClick="onClick"
            android:background="@color/colorPrimaryDark"
            android:text="@string/car_detail_select"
            android:textColor="@color/colorTextInvert" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
