<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp">


                <ImageButton
                    android:layout_width="@dimen/image_width_small"
                    android:layout_height="@dimen/image_height_small"
                    android:layout_gravity="center"
                    android:background="@android:color/white"
                    android:foregroundGravity="center"
                    app:srcCompat="@drawable/driver"
                    tools:layout_editor_absoluteX="164dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:text="Dwayne Jownhson"
                    android:textColor="@color/colorTextInvert"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp">


                <ImageButton
                    android:layout_width="158dp"
                    android:layout_height="@dimen/image_height_small"
                    android:layout_gravity="center"
                    android:background="@android:color/white"
                    android:foregroundGravity="center"
                    android:src="@drawable/sedan_car_front"
                    tools:layout_editor_absoluteX="164dp"
                    tools:layout_editor_absoluteY="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:text="AT-208-XL"
                    android:textColor="@color/colorTextInvert"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="73dp"
            tools:layout_editor_absoluteY="266dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_modify_info"
                android:textAlignment="center"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="327dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_change_car"
                android:textAlignment="center"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="390dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_documents"
                android:textAlignment="center"
                android:textSize="25dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="456dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_history"
                android:textAlignment="center"
                android:textSize="25dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="130dp"
            tools:layout_editor_absoluteY="456dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/action_logout"
                android:textAlignment="center"
                android:textSize="25dp" />
        </LinearLayout>

    </LinearLayout>


</android.support.constraint.ConstraintLayout>